// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshot should match snapshot 1`] = `
<Avatar
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with failureBadge 1`] = `
<Avatar
  failureBadge={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
    <Presence
      isCircularWrapper={true}
      presenceColor="var(--mds-color-theme-indicator-attention)"
      presenceIcon="warning"
      size={24}
    >
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--mds-color-theme-indicator-attention)"
          name="warning"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="warning"
              height="100%"
              style={
                Object {
                  "fill": "var(--mds-color-theme-indicator-attention)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </Presence>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with hideDefaultTooltip 1`] = `
<Avatar
  hideDefaultTooltip={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title=""
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with icon 1`] = `
<Avatar
  icon="check"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <Icon
      className="md-avatar-wrapper-children md-avatar-icon-wrapper"
      name="check"
      scale={16}
      weight="bold"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-avatar-wrapper-children md-avatar-icon-wrapper md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={16}
          data-test="check"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with initials 1`] = `
<Avatar
  initials="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with isTyping 1`] = `
<Avatar
  isTyping={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
    <span
      className="md-avatar-wrapper-children md-avatar-animation-wrapper"
    >
      <div
        style={
          Object {
            "transform": "scale(0.4)",
          }
        }
      >
        <Loading
          small={false}
        >
          <div
            className="md-loading"
          >
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
          </div>
        </Loading>
      </div>
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with onPress 1`] = `
<Avatar
  onPress={[Function]}
  title="Cisco Webex"
>
  <ButtonSimple
    aria-label="Cisco Webex"
    className="md-avatar-button-wrapper"
    onPress={[Function]}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          aria-label="Cisco Webex"
          className="md-avatar-button-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div
            className="md-avatar-wrapper"
            data-color="default"
            data-size={24}
            title="Cisco Webex"
          >
            <Initials
              className="md-avatar-wrapper-children"
              initials="CW"
              type="person"
            >
              <span
                className="md-avatar-wrapper-children"
              >
                CW
              </span>
            </Initials>
          </div>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with presence 1`] = `
<div>
  <Avatar
    key="0"
    presence="default"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
    </div>
  </Avatar>
  <Avatar
    key="1"
    presence="active"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-stable)"
        presenceIcon="unread"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-stable)"
            name="unread"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="unread"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-stable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="2"
    presence="meet"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="camera-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="camera-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="camera-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="3"
    presence="schedule"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="meetings-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="meetings-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="meetings-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="4"
    presence="call"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="handset"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="handset"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="handset"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="5"
    presence="DND"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-attention)"
        presenceIcon="dnd-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-attention)"
            name="dnd-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="dnd-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-attention)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="6"
    presence="presenting"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-attention)"
        presenceIcon="share-screen"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-attention)"
            name="share-screen"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="share-screen"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-attention)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="7"
    presence="quietHours"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="quiet-hours-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="quiet-hours-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="quiet-hours-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="8"
    presence="away"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="recents-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="recents-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="recents-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="9"
    presence="OOO"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="pto-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="pto-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="pto-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="10"
    presence="busy"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="busy-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="busy-presence"
            scale={14}
            strokeColor="none"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="busy-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="11"
    presence="onMobile"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="phone"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="phone"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="phone"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="12"
    presence="onDevice"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="generic-device-video"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="generic-device-video"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="generic-device-video"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="13"
    presence="onHold"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="pause"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="pause"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="pause"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
</div>
`;

exports[`Avatar snapshot should match snapshot with size 1`] = `
<Avatar
  size={124}
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={124}
    title="CW"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="C"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        C
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with src & alt 1`] = `
<Avatar
  alt="alt"
  src="src"
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="CW"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="C"
      type="person"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        C
      </span>
    </Initials>
    <img
      alt="alt"
      className="md-avatar-wrapper-children md-avatar-image-hidden"
      onError={[Function]}
      onLoad={[Function]}
      src="src"
    />
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with type 1`] = `
<Avatar
  title="Cisco Webex"
  type="space"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="C"
      type="space"
    >
      <span
        className="md-avatar-wrapper-children"
      >
        C
      </span>
    </Initials>
  </div>
</Avatar>
`;
